--- a/Lab-1/Problem1.html
+++ b/Lab-1/Problem1.html
@@ -5,14 +5,22 @@
 	<title>The runners Home&trade;</title>
 </head>
 <body>
-	<p>Hello, Stranger!</p>
-	<h1><b>Welcomer to Runners Home&trade;</b></h1>
-	<h2><b>Runners Home&trade; is dedicated to providing you with:</b></h2>
-	<ul>
-		<li>the most up-to-date information on running races.</li>
-		<li>the best resources for runners.</li>
-	</ul>
-	<hr>
-	<p>&copy; Runners Home. All rights reserved.</p>
+	<header>
+		<p>Hello, Stranger!</p>
+	</header>
+	
+	<main>
+		<h1><b>Welcomer to Runners Home&trade;</b></h1>
+		<h2><b>Runners Home&trade; is dedicated to providing you with:</b></h2>
+		<ul type="disc">
+			<li>the most up-to-date information on running races.</li>
+			<li>the best resources for runners.</li>
+		</ul>
+		<hr>
+	</main>
+
+	<footer>
+		<p>&copy; Runners Home. All rights reserved.</p>
+	</footer>
 </body>
 </html>
