--- a/Lab-1/Problem2.html
+++ b/Lab-1/Problem2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Problem 2</title>
+	<title>Nested List</title>
 </head>
 <body>
 	<ol type="I">
@@ -16,10 +16,10 @@
 			<ol type="1">
 				<li>Nested Item 2.1</li>
 				<li>Nested Item 2.2
-					<ul style="list-style-type:circle">
+					<ul type="circle">
 						<li>Nested Item 2.2.1</li>
 						<li>Nested Item 2.2.2
-							<ul style="list-style-type:square">
+							<ul type="square">
 								<li>Nested Item 2.2.2.1</li>
 								<li>Nested Item 2.2.2.2</li>
 							</ul>
@@ -30,7 +30,7 @@
 			</ol>
 		</li>
 		<li>List Item 3
-			<ul style="list-style-type:disc">
+			<ul type="disc">
 				<li>Nested Item 3.1</li>
 				<li>Nested Item 3.2</li>
 				<li>Nested Item 3.3</li>
